# gusgb

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: apu.c  apu.h  cart.c  cart.h  clock.c  clock.h  color.h  cpu.c  cpu.h  cpu_debug.c  cpu_debug.h  cpu_ext_ops.c  cpu_ext_ops.h  cpu_opcodes.c  cpu_opcodes.h  cpu_utils.c  cpu_utils.h  debug.h  game_boy.c  game_boy.h  gpu.c  gpu.h  gusgb.c  gusgb.h  interrupt.c  interrupt.h  keys.c  keys.h  main.c  mmu.c  mmu.h  rom.c  rom.h  sound.c  sound.h  timer.c  timer.h  utils.h
src/ai/: ai.h  gb_ai.c  gb_ai.h  genetic_alg.c  genetic_alg.h  main.c  neural_net.c  neural_net.h  neuron.c  neuron.h  neuron_layer.c  neuron_layer.h  player.c  player.h  population.c  population.h  random.c  random.h  training.c
src/ai/fann/: gb_ai_fann.c  gb_ai_fann.h  main.c  training.c
src/apu/: apu.c  apu.h  ch2.c  ch2.h  length_counter.c  length_counter.h  noise_ch.c  noise_ch.h  sqr_ch.c  sqr_ch.h  timer.c  timer.h  volume_envelope.c  volume_envelope.h  wave_ch.c  wave_ch.h
src/as/: cart.c  cart.h  gbas.c  gbas.h  gbas.l  gbas.y  gusdump.c  lex.c  lex.h  list.c  main.c  op_enc.c  op_enc.h  opcodes.c  opcodes.h  parser.c  parser.h  str.c  str.h  token.c  token.h
src/as/examples/: common.s  empty.s  test.s  white_screen.s
src/cartridge/: cart.c  cart.h  mbc1.c  mbc1.h  mbc3.c  mbc3.h  mbc5.c  mbc5.h
src/debugger/: bg_map_window.c  bg_map_window.h  button.c  button.h  debugger.c  debugger.h  palette_window.c  palette_window.h  text.c  text.h  tile_window.c  tile_window.h
src/objdump/: objdump.c
src/utils/: list.c  list.h
test/: test.sh  test_roms.sh  ut.h
test/ai/: neural_net_test.cc  neuron_layer_test.cc  neuron_test.cc
test/cartridge/: main.c  mbc3.c  mbc3_test.cc
test/cpu/: asm.c  asm.h  cpu_test.c  main.c  mmu_mock.c  parser_test.c
